--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,6 +36,6 @@ jobs:
       run: |
         pip install coverage
         coverage run manage.py test
-        coverage report
+        coverage report --fail-under=75 && coverage xml
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v2
