--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,9 +2,9 @@ name: Prod Workflow
  
 on:
   pull_request:
-    branches: [main]
+    branches: [master]
   push:
-    branches: [main]
+    branches: [master]
  
 jobs:
   health-checkup-job:
