--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.2.12
 djangorestframework==3.13.1
 flake8==4.0.1
 mccabe==0.6.1
+mysqlclient==2.1.0
 pycodestyle==2.8.0
 pycparser==2.21
 pyflakes==2.4.0
