--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,7 +13,7 @@ jobs:
       mysql:
         image: mysql:latest
         env:
-          MYSQL_ROOT_PASSWORD: django
+          MYSQL_ROOT_PASSWORD: postgres
           MYSQL_DATABASE: django_ci_cd
         ports:
           - 3306:3306
@@ -42,7 +42,7 @@ jobs:
           APP_DB_USER: root
           APP_DB_PASSWORD: postgres
           APP_DB_HOST: 127.0.0.1
-          APP_DB_PORT: 3306
+          APP_DB_PORT: $
       - name: Run Tests
         run: |
           python manage.py test
@@ -52,7 +52,7 @@ jobs:
           APP_DB_USER: root
           APP_DB_PASSWORD: postgres
           APP_DB_HOST: 127.0.0.1
-          APP_DB_PORT: 3306  
+          APP_DB_PORT: $  
       - name: Coverage report
         run: |
           pip install coverage
