--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -13,7 +13,7 @@ jobs:
       mysql:
         image: mysql:8.0.21
         env:
-          MYSQL_ROOT_PASSWORD: django
+          MYSQL_ROOT_PASSWORD: postgres
           MYSQL_DATABASE: django_ci_cd
         ports: ['3306:3306']
   
@@ -40,7 +40,7 @@ jobs:
           APP_DB_USER: root
           APP_DB_PASSWORD: postgres
           APP_DB_HOST: 127.0.0.1
-          APP_DB_PORT: 3306
+          APP_DB_PORT: $
       - name: Run Tests
         run: |
           python manage.py test
@@ -50,7 +50,7 @@ jobs:
           APP_DB_USER: root
           APP_DB_PASSWORD: postgres
           APP_DB_HOST: 127.0.0.1
-          APP_DB_PORT: 3306
+          APP_DB_PORT: $
       - name: Coverage report
         run: |
           pip install coverage
