--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.5.0
+cffi==1.15.0
 coverage==6.3.2
+cryptography==36.0.2
 Django==3.2.12
 djangorestframework==3.13.1
 flake8==4.0.1
 mccabe==0.6.1
+mysqlclient==2.1.0
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
 PyMySQL==1.0.2
 pytz==2022.1
