--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -40,7 +40,7 @@ jobs:
           APP_DB_USER: root
           APP_DB_PASSWORD: postgres
           APP_DB_HOST: localhost
-          APP_DB_PORT: 3306
+          APP_DB_PORT: $
       - name: Run Tests
         run: |
           python manage.py test
@@ -50,7 +50,7 @@ jobs:
           APP_DB_USER: root
           APP_DB_PASSWORD: postgres
           APP_DB_HOST: localhost
-          APP_DB_PORT: 3306
+          APP_DB_PORT: $
       - name: Coverage report
         run: |
           pip install coverage
