changed yml file for dev environment

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: postgres
           MYSQL_DATABASE: django_ci_cd
-        ports: ['3306:3306']
+        ports: ["3306:3306"]
 
     strategy:
       max-parallel: 4
@@ -34,7 +34,7 @@ jobs:
           pip install -r requirements.txt
       - name: Run Migrations
         run: python manage.py migrate
-        env: 
+        env:
           APP_DB_ENGINE: django.db.backends.mysql
           APP_DB_NAME: django_ci_cd
           APP_DB_USER: root
@@ -44,13 +44,13 @@ jobs:
       - name: Run Tests
         run: |
           python manage.py test
-        env: 
+        env:
           APP_DB_ENGINE: django.db.backends.mysql
           APP_DB_NAME: django_ci_cd
           APP_DB_USER: root
           APP_DB_PASSWORD: postgres
           APP_DB_HOST: localhost
-          APP_DB_PORT: 3306  
+          APP_DB_PORT: 3306
       - name: Coverage report
         run: |
           pip install coverage
